<resources>
    <string name="app_name">Multimedionator</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="icon_song_desc">desc</string>
    <string name="song_secondLine">Unknown description</string>
    <string name="song_Top">Unknown song</string>
    <string name="title_activity_obraz">Obraz</string>
    <string name="action_dark">Dark Background</string>
    <string name="action_light">Light Background</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="nutka">Nutka</string>
    <string name="switch_tekst">Pauze  on Flip</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="secret_option">Secret Option</string>
    <string name="enable_tilting">Enable Tilting</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
</resources>
