<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ja.aplikacjafinal.ImageActivity">
    <item
        android:id="@+id/action_dark"
        android:orderInCategory="100"
        android:title="@string/action_dark"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_light"
        android:orderInCategory="100"
        android:title="@string/action_light"
        app:showAsAction="never" />
    <item
        android:id="@+id/Tilt_option"
        android:checkable="true"
        android:checked="true"
        android:orderInCategory="100"
        android:title="@string/enable_tilting"
        app:showAsAction="never" />

</menu>
