<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay_odt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="ja.aplikacjafinal.MusicPlayerActivity">

    <Button
        android:id="@+id/forward"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/ff"
        app:layout_constraintBottom_toBottomOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toEndOf="@+id/start"
        app:layout_constraintTop_toTopOf="@+id/start" />

    <Button
        android:id="@+id/back"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/previous"
        app:layout_constraintBottom_toBottomOf="@+id/start"
        app:layout_constraintEnd_toStartOf="@+id/start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/start"
        app:layout_constraintVertical_bias="0.835" />

    <Button
        android:id="@+id/start"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.835" />

    <Button
        android:id="@+id/volUp"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="60dp"
        android:background="@drawable/volup"
        app:layout_constraintBottom_toTopOf="@+id/volDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:id="@+id/volDown"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/voldown"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start"
        app:layout_constraintTop_toBottomOf="@+id/volUp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/nutka"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.267"
        app:srcCompat="@drawable/music" />

    <TextView
        android:id="@+id/song_title"
        android:layout_width="314dp"
        android:layout_height="32dp"
        android:gravity="center"
        android:text="@string/song_Top"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/song_author"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/song_author"
        android:layout_width="256dp"
        android:layout_height="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/song_secondLine"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/song_title"
        app:layout_constraintStart_toStartOf="@+id/song_title"
        app:layout_constraintTop_toBottomOf="@+id/song_title" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:text="@string/switch_tekst"
        app:layout_constraintBottom_toTopOf="@+id/volUp"
        app:layout_constraintEnd_toEndOf="@+id/volUp"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/volUp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="256dp"
        android:layout_height="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/current_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/back"
        app:layout_constraintEnd_toStartOf="@+id/final_time"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/final_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="100dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/forward"
        app:layout_constraintEnd_toEndOf="@+id/seekBar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/current_time"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

</android.support.constraint.ConstraintLayout>
